--- a/src/css/AuthForm.css
+++ b/src/css/AuthForm.css
@@ -1,31 +1,39 @@
+.App {
+  text-align: center;
+    background: #A5CBCE;
+    background: -moz-linear-gradient(left, #A5CBCE 0%, #3FA457 50%, #C3C54F 100%);
+    background: -webkit-linear-gradient(left, #A5CBCE 0%, #3FA457 50%, #C3C54F 100%);
+    background: linear-gradient(to right, #A5CBCE 0%, #3FA457 50%, #C3C54F 100%);
+}
+
 .auth-form-wrapper {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .auth-form-header {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .auth-form-card {
-  width: 350px !important;
+    width: 30% !important;
 }
 
 .form-labels {
-  text-align: left;
+    text-align: left;
 }
 
 .auth-form-fields,
 .auth-form-buttons {
-  margin-top: 20px !important;
+    margin-top: 20px !important;
 }
 
 .auth-form-buttons {
-  width: 100%;
+    width: 100%;
 }
 
 .google-login {
-  margin-top: 40px;
+  margin-top: 5%;
 }
