adding github ribbon

--- a/src/css/AuthForm.css
+++ b/src/css/AuthForm.css
@@ -12,6 +12,9 @@
     justify-content: center;
     align-items: center;
 }
+.ribbon{
+    float: right;
+}
 
 .auth-form-header {
     margin-bottom: 20px;
